@@ -66,6 +66,7 @@
 	-Wl,--disable-new-dtags is used (if supported) when linking Oracle,
 		SAP, DB2, and Informix stuff now, so RPATH will be used instead
 		of RUNPATH
+	php ini files are automatically installed on freebsd now
 
 1.0.1 - updated sqlr-bench to create "db"-bench.png
 	added edoc-generated API docs for the Erlang API
